--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ BASE_URL=192.168.10.22
 PORT=8001
 
 MONGO_URL=mongodb://localhost:27017/laundryDB
-MONGO_URL=mongodb+srv://<db_username>:<db_password>@cluster0.f2via.mongodb.net/db_name?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URL=mongodb+srv://thakur_saad:IHI4Jo3WEIpEMQGw@cluster0.f2via.mongodb.net/trackTrekDB?retryWrites=true&w=majority&appName=Cluster0
 
 BCRYPT_SALT_ROUNDS=12
 JWT_SECRET='spark-tech'
